<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <ImageView
        android:contentDescription="@string/cntDescPhoto"
        android:id="@+id/ivGallery"
        android:layout_width="356dp"
        android:layout_height="265dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/snap"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:onClick="takePhoto"
        android:text="@string/button_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="194dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="200dp"
        android:onClick="scrollPhotos"
        android:text="@string/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="200dp"
        android:onClick="scrollPhotos"
        android:text="@string/button_prev"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="622dp" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:onClick="searchButton"
        android:text="@string/button_search"
        tools:layout_editor_absoluteX="291dp"
        tools:layout_editor_absoluteY="635dp" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="340dp"
        android:layout_height="42dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="55dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <EditText
        android:labelFor="@+id/etCaption"
        android:autofillHints="name"
        android:id="@+id/etCaption"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="274dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <Button
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="124dp"
        android:onClick="getLocation"
        android:text="GET LOCATION"
        tools:layout_editor_absoluteX="291dp"
        tools:layout_editor_absoluteY="635dp" />

    <TextView

        android:id="@+id/txtlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="189dp"
        android:layout_marginBottom="241dp"
        android:text="@string/text_location"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_city"
        android:layout_width="170dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="200dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="119dp"
        android:layout_height="60dp"
        android:onClick="shareButton"
        android:text="Share"
        android:translationX="150dp"
        android:translationY="650dp" />

</RelativeLayout>